--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ go:
   - "1.11.x"
 
 install:
-  - CGO_ENABLED=0 GOOS=linux  GOARCH=amd64 go build -o uuidgen_${GOOS}_${GOARCH} main.go
-  - CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o uuidgen_${GOOS}_${GOARCH} main.go
+  - CGO_ENABLED=0 GOOS=linux  GOARCH=amd64 go build -o uuidgen_linux_amd64 main.go
+  - CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o uuidgen_darwin_amd64 main.go
 
 script:
   - uuidgen -h
