增加 travis 打包发布, 优化 uuidgen -h 测试退出值

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o uuidgen_darwin_amd64 main.go
 
 script:
-  - uuidgen -h
+  - uuidgen -h || exit 0
   - uuidgen
   - uuidgen -n 10 -upper
 
